@@ -1,3 +1,8 @@
+2003-12-05  Srinivasa Ragavan <sragavan@novell.com>
+
+	* gnome-theme-installer.c (install_dialog_response): Fix for #116224, 
+	  infinite loop, when installing themes from ~/.themes
+
 Tue Aug  5 15:38:31 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* theme-properties.glade: Fix from Christian Neumair to fix
